Finanzen.ch can not be used for historical data